[WNC-31] test route for notifications (#24)
* [WNC-31] test route for notifications

* [WNC-31] test route for notifications
