# internal/domain/model/notification.go
@@ -1,0 +1,7 @@
+package model
+
+type NotificationRequest struct {
+	Title string `json:"title"`
+	Body  string `json:"body"`
+	Token string `json:"token"`
+}
